# news-clustering-frontend

./: .gitignore  README.md  app.py  example.env  pyproject.toml
app/: __init__.py  utils.py
app/routes/: admin.py  main.py  reactions.py
app/static/css/: detail.css
app/static/css/errors/: error.css  error404.css  error500.css
app/templates/: detail.html  index.html  login.html
app/templates/admin/: base.html  dashboard.html  models.html  parsers.html  system.html
app/templates/errors/: 404.html  500.html
static/css/: index.css
static/js/: detail.js
templates/: detail.html  index.html
