[project]
name = "news-clustering-frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "black-lemonov",email = "egor.porf1@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "redis (>=6.2.0,<7.0.0)",
    "flask-login (>=0.6.3,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
